--- a/contract/package.json
+++ b/contract/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "node asconfig.js",
     "deploy:dev": "near dev-deploy",
-    "test": "asp && yarn build && jest test",
+    "test": "asp && npx yarn build && jest test",
     "asp": "asp --verbose"
   },
   "devDependencies": {
