--- a/contract/package.json
+++ b/contract/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "counter",
-  "description": "Counter Smart Contract\n\nThis project contains implementation of counter backed by blockchain.\n\n[AssemblyScript](https://github.com/AssemblyScript/assemblyscript) compiles strictly typed TypeScript to WebAssembly using Binaryen. See the [AssemblyScript wiki](https://github.com/AssemblyScript/assemblyscript/wiki) for further instructions and documentation.",
+  "name": "blogchain",
+  "description": "Blogchain es una plataforma de divulgacion decentralizada y sin intermediarios",
   "version": "0.0.1",
   "scripts": {
     "build": "node asconfig.js",
     "deploy:dev": "near dev-deploy",
-    "test": "asp && npx yarn build && jest test",
+    "test": "asp && yarn build && jest test",
     "asp": "asp --verbose"
   },
   "devDependencies": {
